--- a/Core/CoreGitSync/plugin.yml
+++ b/Core/CoreGitSync/plugin.yml
@@ -2,7 +2,7 @@ name: RealLandsCore
 main: org.eu.nl.onno204.Core.Main.main
 version: 1.2.10
 prefix: RealLandsCore
-depend: [ProtocolLib, PacketWrapper, Vault, MinetopiaUpgradePL, PlayerVaults, PingAPI]
+depend: [ProtocolLib, PacketWrapper, Vault, MinetopiaUpgradePL, PlayerVaults]
 description: >
              RealLandsCore by onno204.
 commands:
@@ -22,7 +22,7 @@ commands:
   pvp: 
     description: Nope!
     usage: Just Type It :D
-  Nope: 
+  tnt: 
     description: Nope!
     usage: Just Type It :D
   Nope: 
