--- a/Core/CoreGitSync/.classpath
+++ b/Core/CoreGitSync/.classpath
@@ -2,11 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/Gebruiker/Programming/minecraft/bukkit versions/Spigot_1.8.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Gebruiker/Programming/minecraft/APIs/ProtocolLib.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Gebruiker/Programming/minecraft/APIs/PacketWrapper.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Gebruiker/Programming/minecraft/APIs/Vault.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Gebruiker/Programming/minecraft/APIs/MinetopiaUpgradePL.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Gebruiker/Programming/minecraft/APIs/PlayerVaults.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Gebruiker/Programming/minecraft/bukkit versions/spigot-1.8.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
